# clapety-clap

./: .gitignore  Cargo.toml  README.md  hello.py  pyproject.toml
clap/: __init__.py  cli.py  core.py  server.py
clap/static/: index.html
clapety-clap-rs/: Cargo.toml  README.md
clapety-clap-rs/src/: lib.rs  main.rs
clapety-clap-rs/tests/: infer_loop.rs
scripts/: export_clap_onnx.py
tests/: test_cli_smoke.py
tests/wav/: .gitattributes
