[project]
name = "clap"
version = "0.1.0"
description = "CLI tool for audio captioning using CLAP model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
clap = "clap.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

# uv-specific dependency groups (uv will read these). Mirrors optional deps for conventional tooling.
[dependency-groups]
dev = ["pytest>=7.0.0"]
