[package]
name = "clapety-clap"
version = "0.1.0"
edition = "2021"
description = "Rust CLI + lib for audio tag ranking similar to Python clapety-clap (CLAP/CLIP style embeddings)."
license = "MIT OR Apache-2.0"
repository = "https://example.com/your/repo"

[lib]
name = "clapety_clap"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "clapety-clap"
path = "src/main.rs"

[features]
default = ["cpu"]
# Features
cpu = []
wasm = []
onnx = ["dep:onnxruntime", "dep:tokenizers"]
tract = ["dep:tract-onnx", "dep:tokenizers"]

[dependencies]
# Audio decoding (basic) - hound for wav; symphonia for more formats
hound = "3"
symphonia = { version = "0.5", features = [
    "aac",
    "mp3",
    "flac",
    "vorbis",
    "isomp4",
] }

# Numeric / tensor-like ops (ndarray for now)
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-stats = "0.6"
rayon = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
colored = "2"
comfy-table = "7"
rand = "0.8"
onnxruntime = { version = "0.0.14", optional = true }
tract-onnx = { version = "0.21", optional = true }
lazy_static = "1"
rustfft = "6"
tokenizers = { version = "0.15", optional = true }

# Placeholder for model weights / tokenization once integrated (e.g. candle/onnxruntime)
# candle = { version = "0.5", optional = true }
# onnxruntime = { version = "0.20", features=["load-dynamic"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.wasm]
# Future wasm build instructions placeholder
